--- a/about_me.html
+++ b/about_me.html
@@ -10,7 +10,7 @@
    <header>
     <nav class="top-navbar">
         <li><a href="index.html">HOME</a></li>
-        <li><a href="about_me.html">ABOUT ME</a></li>
+        <li><a href="about_me.html">ABOUT</a></li>
         <li><a href="thadei_cv.pdf">CV</a></li>
         <li><a href="contacts.html">CONTACTS</a></li>
     </nav>
