--- a/about_me.html
+++ b/about_me.html
@@ -13,7 +13,7 @@
         <li><a href="about_me.html">ABOUT</a></li>
         <li><a href="thadei_cv.pdf">CV</a></li>
         <li><a href="contacts.html">CONTACTS</a></li>
-    </nav>
+    </nav><br><br>
    </header>
     <h2>Education background</h2>
     <P>I started my education journey in 2009 at Iwungilo primary school in Njombe,Tanzania and in 2015 I graduated primary level education. In the year 2016 I attended the one year pre-form one at Matola seminary. In the year 2017 I joined St.Joseph Kilocha seminary for ordinary level education and successful graduated in 2020. In 2021 I joined Same secondary school for Advanced level education taking physics, chemistry and Mathematics and I successfully graduated in 2023. Later in the same year I successfully joined the University of Dar es salaam persuing the degree of science in computer science.</P>
@@ -21,7 +21,7 @@
     <p>At the unirversity of Dar es salaam I am enrolled in the program of bachelor of science in computer science. I chose this program because I have been passionate about problem solving so, studying computer science will help me fullfil my passion. Also I chose computer science becouse it promotes innovation. </p>
     <h2>Career goals</h2>
     <p>I am interested in becoming a software engineer and creating innovative applications that solve real-world problems.<br>I am also interested in becoming a security analyst to safeguard data and systems.</p>
-    <br><br>
+    <br><br><br><br><br><br>
     <footer>All rights reserved @msemwathadei</footer>    
 </body>
 </html>
