--- a/about_me.html
+++ b/about_me.html
@@ -13,8 +13,8 @@
         <li><a href="about_me.html">ABOUT</a></li>
         <li><a href="thadei_cv.pdf">CV</a></li>
         <li><a href="contacts.html">CONTACTS</a></li>
-    </nav><br><br><br><br><br>
-   </header>
+    </nav>
+   </header><br><br><br><br><br>
     <h2>Education background</h2>
     <P>I started my education journey in 2009 at Iwungilo primary school in Njombe,Tanzania and in 2015 I graduated primary level education. In the year 2016 I attended the one year pre-form one at Matola seminary. In the year 2017 I joined St.Joseph Kilocha seminary for ordinary level education and successful graduated in 2020. In 2021 I joined Same secondary school for Advanced level education taking physics, chemistry and Mathematics and I successfully graduated in 2023. Later in the same year I successfully joined the University of Dar es salaam persuing the degree of science in computer science.</P>
     <h2>My program at the university</h2>
