--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="details" content="thadei claud msemwa">
     <title>Document</title>
     <link rel="stylesheet" href="my_web.css">
 </head>
