--- a/about_me.html
+++ b/about_me.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="details" content="thadei msemwa, thadei claud msemwa,thadei, msemwa">
+    <!--<meta name="details" content="thadei msemwa, thadei claud msemwa,thadei, msemwa">-->
     <title>THADEI CLAUD MSEMWA</title>
     <link rel="stylesheet" href="my_web.css">
 </head>
