--- a/about_me.html
+++ b/about_me.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="thadei msemwa,thadei,thadei claud msemwa,msemwa">
     <title>THADEI CLAUD MSEMWA</title>
     <link rel="stylesheet" href="my_web.css">
 </head>
