--- a/about_me.html
+++ b/about_me.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="thadei msemwa,thadei,thadei claud msemwa,msemwa">
+    <meta name="description" content="the education background of Thadei Claud Msemwa">
     <title>THADEI CLAUD MSEMWA</title>
     <link rel="stylesheet" href="my_web.css">
 </head>
